# ml_scripts

./: .coveragerc  LICENSE.md  README.md  pyproject.toml
data/: random_1dfeature_dataset.csv  random_dataset_generator.py
examples/: nested_cv_gcn.ipynb  nested_cv_mlp.ipynb
src/: cv.py  train.py  utils.py
src/data/: dataset.py
src/model/: gcn.py  mlp.py
tests/: conftest.py  test_cv_gcn.py  test_cv_mlp.py  test_dataset.py  test_mlp.py  test_train_gcn.py  test_train_mlp.py  test_utils.py
